# numpy-opencv-converter

./: CMakeLists.txt  LICENSE  README.md  np_opencv_converter.cpp  np_opencv_converter_test.cpp
cmake/: boost-python.cmake
tests/: np_opencv_module.cpp  test-numpy-opencv-converter.sh
utils/: container.h  conversion.cpp  conversion.h
